@@ -1,4 +1,5 @@
 5.4.0 -> 5.4.1:
+    - proyvind: merge multiarch-utils from mandriva.
     - proyvind: macros: sync with updated python macros from mandriva.
     - proyvind: rpmfc: add internel dep generator helper for kernel modules.
     - provyind: kmod-deps.sh: add dependency extractor from mandriva.
